@@ -1,3 +1,13 @@
+Sat Dec  5 17:58:51 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/transport/multicast/MulticastConfiguration.h:
+        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:
+        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:
+        * dds/DCPS/transport/multicast/multicast.ini-dist:
+        * docs/html/multicast/index.html:
+
+          Updated documentation; renamed nak_repair_size to nak_depth.
+
 Fri Dec  4 22:34:19 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/transport/framework/TransportSendBuffer.h:
